<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/math3"
    tools:context=".OrderNumbersActivity">

    <TextView
        android:id="@+id/textNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnSortAscending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_ascending" />

    <Button
        android:id="@+id/btnSortDescending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_descending" />

</LinearLayout>