<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/math2"
    tools:context=".CompareNumbersActivity">

    <TextView
        android:id="@+id/textNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnCompare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textSize="20sp" />

</LinearLayout>
